getting up to date

--- a/projects/eda/eda.qmd
+++ b/projects/eda/eda.qmd
@@ -1,17 +1,17 @@
 ---
 title: "CMU EDA project"
 description: "CMU Sports Analytics summer 2025 EDA project"
-date: Juen 2025
+date: June 2025
 about: 
   template: solana
-  image: projects/eda/cover.jpeg
+  image: cover.png
   links: 
     - icon: github
       text: "Github"
       href: "https://github.com/esylvester04/CMU-EDA-2025"
     - icon: easel
       text: "Presentation"
-      href: projects/eda/eda-pres.pdf
+      href: eda-pres.pdf
 format: html
 ---
 
