--- a/projects.qmd
+++ b/projects.qmd
@@ -1,12 +1,8 @@
 ---
-title: "projects"
+title: "Projects"
 listing:
   contents: projects # name of the folder
   type: default
+  sort: 
+    - "date desc"
 ---
-
-About this site
-
-```{r}
-1 + 1
-```
