--- a/index.qmd
+++ b/index.qmd
@@ -7,12 +7,10 @@ about:
   links:
     - icon: geo-alt-fill
       text: Smith College 2026
+      href: https://www.smith.edu/academics/statistical-data-sciences
     - icon: inbox
       text: Email
       href: mailto:esylvester@smith.edu
-    - icon: inboc
-      text: Email (Personal)
-      href: mailto:ellasylvester34@gmail.com
     - icon: github
       text: Github
       href: https://github.com/esylvester04
